--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.8.2",
